--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
 
         </ul>
 
-        Plats principaux
+        <h2>Plats principaux</h2>
 
         <ul>
 
@@ -102,7 +102,7 @@
                 Pain perdu avec sa boule de glace
 
                 <p>Brioche francaise, toast avec boule de glace</p>
-                
+
             </li>
 
         </ul>
